# budget-warden

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  deny.toml
.github/: release.yml
.github/workflows/: ci.yml  release.yml  scheduled-security.yml
examples/: news_cache_fallback.rs  serpapi_free_plan.rs  toml_config.rs  weather_daily_budget.rs
examples/config/: news_daily_budget.toml  serpapi_free_plan.toml  weather_daily_budget.toml
migrations/postgres/: 001_budget_warden.sql
migrations/sqlite/: 001_budget_warden.sql
src/: broker.rs  clock.rs  decision.rs  error.rs  key.rs  lib.rs  policy.rs  priority.rs  request.rs  reservation.rs  unit.rs  usage.rs  window.rs
src/config/: mod.rs  model.rs  toml.rs
src/pacing/: evaluate.rs  mod.rs
src/report/: mod.rs
src/store/: codec.rs  contract.rs  memory.rs  mod.rs  postgres.rs  redis_store.rs  sqlite.rs
src/telemetry/: mod.rs
tests/: store_contract.rs
