[package]
name = "budget-warden"
version = "0.1.2"
edition = "2024"
description = "Policy-based protection for scarce external API budgets."
license = "MIT OR Apache-2.0"
repository = "https://github.com/boniface/budget-warden"
readme = "README.md"
rust-version = "1.95"
keywords = ["budget", "rate-limit", "quota", "api", "governor"]
categories = ["api-bindings", "asynchronous"]

[features]
default = ["std", "memory", "serde", "chrono"]
std = []
serde = ["dep:serde", "dep:serde_json", "chrono/serde"]
chrono = []
time = []
memory = []
postgres = [
  "dep:sqlx-core",
  "dep:sqlx-postgres",
  "sqlx-core/_rt-tokio",
  "sqlx-core/_tls-rustls-ring-webpki",
  "sqlx-core/chrono",
  "sqlx-postgres/chrono",
  "chrono",
]
redis = ["dep:redis", "dep:deadpool-redis", "redis/aio", "redis/tokio-comp"]
sqlite = [
  "dep:sqlx-core",
  "dep:sqlx-sqlite",
  "sqlx-core/_rt-tokio",
  "sqlx-core/_tls-rustls-ring-webpki",
  "sqlx-core/chrono",
  "sqlx-sqlite/bundled",
  "sqlx-sqlite/chrono",
  "chrono",
]
tracing = ["dep:tracing"]
toml = ["dep:toml", "serde"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"
deadpool-redis = { version = "0.22", optional = true }
num-traits = "0.2"
redis = { version = "0.32", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
sqlx-core = { version = "0.8", default-features = false, optional = true }
sqlx-postgres = { version = "0.8", default-features = false, optional = true }
sqlx-sqlite = { version = "0.8", default-features = false, optional = true }
thiserror = "2"
toml = { version = "0.9", optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
